--- a/.github/workflows/create-hetzner-server.yml
+++ b/.github/workflows/create-hetzner-server.yml
@@ -99,7 +99,7 @@ jobs:
         working-directory: ${{ env.TF_PATH }}
         run: |
           # TODO: Add configuration for multi-node
-          if [ ${{ env.env_type }} == 'single-node' ]
+          if [ ${{ env.type }} == 'single-node' ]
           then
             echo "ssh_host=$(terraform output -raw public_ip)" >> $GITHUB_OUTPUT
             echo "hostname=$TF_VAR_country_name-$TF_VAR_env_name" >> $GITHUB_OUTPUT
