--- a/.github/workflows/create-hetzner-server.yml
+++ b/.github/workflows/create-hetzner-server.yml
@@ -20,7 +20,7 @@ on:
           type: string
           description: Environment to deploy to
           required: true
-        env_type:
+        type:
           type: string
           description: Select group tag you want to execute
           default: 'single-node'
@@ -30,7 +30,7 @@ env:
   TF_VAR_hcloud_token: ${{ secrets.HCLOUD_TOKEN }}
   TF_VAR_country_name: ${{ vars.COUNTRY_NAME }}
   TF_VAR_env_name: ${{ inputs.environment }}
-  TF_VAR_env_type: ${{ github.event.env.type }}
+  TF_VAR_env_type: "${{ inputs.type }}"
   TF_VAR_cloudflare_api_token: ${{ secrets.CLOUDFLARE_API_TOKEN }}
   TF_VAR_cloudflare_zone_id: ${{ secrets.CLOUDFLARE_ZONE_ID }}
   TERRAFORM_REPO: opencrvs/terraform-state
