--- a/infrastructure/docker-compose.deploy.yml
+++ b/infrastructure/docker-compose.deploy.yml
@@ -499,6 +499,8 @@ services:
         tag: 'influxdb'
   # Configure webapps and add traefik config
   client:
+    depends_on:
+      - migration
     environment:
       - DECLARED_DECLARATION_SEARCH_QUERY_COUNT=100
       - COUNTRY_CONFIG_URL=https://countryconfig.{{hostname}}
@@ -536,6 +538,8 @@ services:
         tag: 'client'
 
   countryconfig:
+    depends_on:
+      - migration
     deploy:
       labels:
         - 'traefik.enable=true'
@@ -601,6 +605,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'countryconfig'
   login:
+    depends_on:
+      - migration
     environment:
       - COUNTRY_CONFIG_URL=https://countryconfig.{{hostname}}
       - CONTENT_SECURITY_POLICY_WILDCARD=${CONTENT_SECURITY_POLICY_WILDCARD}
@@ -630,6 +636,8 @@ services:
         tag: 'login'
   # Configure other service with deployment specifc details
   auth:
+    depends_on:
+      - migration
     secrets:
       - jwt-public-key.{{ts}}
       - jwt-private-key.{{ts}}
@@ -669,6 +677,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'auth'
   user-mgnt:
+    depends_on:
+      - migration
     secrets:
       - jwt-public-key.{{ts}}
     environment:
@@ -690,6 +700,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'user-mgnt'
   events:
+    depends_on:
+      - migration
     secrets:
       - jwt-public-key.{{ts}}
     environment:
@@ -731,6 +743,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'notification'
   gateway:
+    depends_on:
+      - migration
     secrets:
       - jwt-public-key.{{ts}}
     environment:
@@ -770,6 +784,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'gateway'
   workflow:
+    depends_on:
+      - migration
     secrets:
       - jwt-public-key.{{ts}}
     environment:
@@ -813,6 +829,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'search'
   metrics:
+    depends_on:
+      - migration
     secrets:
       - jwt-public-key.{{ts}}
     volumes:
@@ -840,6 +858,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'metrics'
   scheduler:
+    depends_on:
+      - migration
     environment:
       - NODE_ENV=production
       - OPENHIM_MONGO_URL=mongodb://openhim:${OPENHIM_MONGODB_PASSWORD}@mongo1/openhim-dev?replicaSet=rs0
@@ -855,6 +875,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'scheduler'
   documents:
+    depends_on:
+      - migration
     deploy:
       replicas: 1
       labels:
@@ -879,6 +901,8 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'documents'
   config:
+    depends_on:
+      - migration
     secrets:
       - jwt-public-key.{{ts}}
     environment:
@@ -982,6 +1006,8 @@ services:
         tag: 'hearth'
 
   webhooks:
+    depends_on:
+      - migration
     secrets:
       - jwt-public-key.{{ts}}
     environment:
@@ -1017,6 +1043,8 @@ services:
         tag: 'webhooks'
 
   dashboards:
+    depends_on:
+      - migration
     volumes:
       # Exceed Docker config file 500 kb file limit, thus a volume mount
       - /opt/opencrvs/infrastructure/metabase/metabase.init.db.sql:/metabase.init.db.sql
