--- a/.github/workflows/seed-data.yml
+++ b/.github/workflows/seed-data.yml
@@ -1,5 +1,5 @@
 name: Seed data
-run-name: Seed data to ${{ inputs.environment }} core=${{ inputs.core-image-tag }}
+run-name: Seed data to ${{ github.event.inputs.environment }} core=${{ github.event.inputs.core-image-tag }}
 on:
   workflow_call:
     inputs:
@@ -34,14 +34,14 @@ on:
         required: true
 jobs:
   seed-data:
-    environment: ${{ inputs.environment }}
+    environment: ${{ github.event.inputs.environment }}
     runs-on: ubuntu-24.04
     outputs:
       outcome: ${{ steps.seed.outcome }}
     timeout-minutes: 60
     steps:
       - name: Pull the seed-data image
-        run: docker pull ghcr.io/opencrvs/ocrvs-data-seeder:${{ inputs.core-image-tag }}
+        run: docker pull ghcr.io/opencrvs/ocrvs-data-seeder:${{ github.event.inputs.core-image-tag }}
       - name: Run docker container
         run: |
           docker run \
@@ -50,4 +50,4 @@ jobs:
             -e "AUTH_HOST=${{ vars.AUTH_HOST }}" \
             -e "COUNTRY_CONFIG_HOST=${{ vars.COUNTRY_CONFIG_HOST }}" \
             -e "SUPER_USER_PASSWORD=${{ secrets.SUPER_USER_PASSWORD }}" \
-            ghcr.io/opencrvs/ocrvs-data-seeder:${{ inputs.core-image-tag }}
+            ghcr.io/opencrvs/ocrvs-data-seeder:${{ github.event.inputs.core-image-tag }}
