--- a/.github/workflows/create-hetzner-server.yml
+++ b/.github/workflows/create-hetzner-server.yml
@@ -43,6 +43,7 @@ jobs:
     outputs:
       ssh_host: ${{ steps.output.outputs.ssh_host }}
       hostname: ${{ steps.output.outputs.hostname }}
+      countryconfig-image-tag: ${{ steps.get_latest_commit.outputs.config_tag }}
     environment: ${{ github.event.inputs.environment }}
     steps:
       - name: Checkout repo ${{ github.repository }}
@@ -212,3 +213,6 @@ jobs:
           git status
           git commit -m "Add environment file for ${{ github.event.inputs.environment }}"
           git push
+      - name: Get latest commit SHA
+        id: get_latest_commit
+        run: echo "config_tag=$(git rev-parse HEAD | cut -c 1-7)" >> $GITHUB_OUTPUT
