--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -43,25 +43,34 @@ jobs:
       # steps.get_latest_commit.outputs.config_tag
     provision-server:
       needs: [verify-branch, create-server]
-      uses: ./.github/workflows/dummy-provision.yml
-      # uses: ./.github/workflows/provision.yml
+      # uses: ./.github/workflows/dummy-provision.yml
+      uses: ./.github/workflows/provision.yml
       with:
         environment: ${{ inputs.environment }}
       secrets: inherit
-    verify-tag:
-      needs: [verify-branch, provision-server, create-server]
+    check-countryconfig:
       runs-on: ubuntu-24.04
+      needs: [verify-branch, create-server]
+      environment: ${{ inputs.environment }}
+      outputs:
+        image_tag: ${{ steps.get_latest_commit.outputs.config_tag }}
       steps:
-      - name: Verify country config image tag
-        run: "echo countryconfig-image-tag: ${{ needs.create-server.outputs.config_tag }}"
+          - name: Checkout repo ${{ github.repository }}
+            uses: actions/checkout@v4
+          - name: Get latest commit SHA
+            id: get_latest_commit
+            run: |
+              git pull
+              git status
+              echo "config_tag=$(git rev-parse HEAD | cut -c 1-7)" >> $GITHUB_OUTPUT
     deploy:
-      needs: [verify-branch, provision-server, create-server]
+      needs: [verify-branch, provision-server, check-countryconfig, create-server]
       # uses: ./.github/workflows/dummy-deploy.yml
       uses: ./.github/workflows/deploy.yml
       with:
         environment: ${{ inputs.environment }}
         core-image-tag: ${{ inputs.core_image_tag }}
-        countryconfig-image-tag: ${{ needs.create-server.outputs.config_tag }}
+        countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.config_tag }}
       secrets: inherit
     seed-data:
       needs: [deploy]
