--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -35,8 +35,8 @@ jobs:
           fi
     create-server:
       needs: verify-branch
-      # uses: ./.github/workflows/dummy-create-server.yml
-      uses: ./.github/workflows/create-hetzner-server.yml
+      uses: ./.github/workflows/dummy-create-server.yml
+      # uses: ./.github/workflows/create-hetzner-server.yml
       with:
         environment: ${{ inputs.environment }}
       secrets: inherit
@@ -75,9 +75,9 @@ jobs:
         countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
       secrets: inherit
     seed-data:
-      needs: [deploy]
-      # uses: ./.github/workflows/dummy-seed.yml
-      uses: ./.github/workflows/seed-data.yml
+      needs: [deploy, check-countryconfig]
+      uses: ./.github/workflows/dummy-seed.yml
+      # uses: ./.github/workflows/seed-data.yml
       with:
         environment: ${{ inputs.environment }}
-        core-image-tag: ${{ inputs.core_image_tag }}  
+        core-image-tag: ${{ inputs.core_image_tag }}
