--- a/.github/workflows/seed-data.yml
+++ b/.github/workflows/seed-data.yml
@@ -1,5 +1,5 @@
 name: Seed data
-run-name: Seed data to ${{ github.event.inputs.environment }} core=${{ github.event.inputs.core-image-tag }}
+run-name: Seed data to ${{ inputs.environment }} core=${{ inputs.core-image-tag }}
 on:
   workflow_call:
     inputs:
@@ -40,9 +40,9 @@ jobs:
     timeout-minutes: 60
     steps:
       - run: |
-          echo "Seeding data to ${{ github.event.inputs.environment }} environment with core image tag: ${{ github.event.inputs.core-image-tag }}"
+          echo "Seeding data to ${{ inputs.environment }} environment with core image tag: ${{ inputs.core-image-tag }}"
       - name: Pull the seed-data image
-        run: docker pull ghcr.io/opencrvs/ocrvs-data-seeder:${{ github.event.inputs.core-image-tag }}
+        run: docker pull ghcr.io/opencrvs/ocrvs-data-seeder:${{ inputs.core-image-tag }}
       - name: Run docker container
         run: |
           docker run \
@@ -51,4 +51,4 @@ jobs:
             -e "AUTH_HOST=${{ vars.AUTH_HOST }}" \
             -e "COUNTRY_CONFIG_HOST=${{ vars.COUNTRY_CONFIG_HOST }}" \
             -e "SUPER_USER_PASSWORD=${{ secrets.SUPER_USER_PASSWORD }}" \
-            ghcr.io/opencrvs/ocrvs-data-seeder:${{ github.event.inputs.core-image-tag }}
+            ghcr.io/opencrvs/ocrvs-data-seeder:${{ inputs.core-image-tag }}
