--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -67,12 +67,13 @@ jobs:
               echo "config_tag=$config_tag" >> $GITHUB_OUTPUT
     deploy:
       needs: [verify-branch, provision-server, check-countryconfig, create-server]
-      uses: ./.github/workflows/dummy-deploy.yml
-      # uses: ./.github/workflows/deploy.yml
+      # uses: ./.github/workflows/dummy-deploy.yml
+      uses: ./.github/workflows/deploy.yml
       with:
         environment: ${{ inputs.environment }}
         core-image-tag: ${{ inputs.core_image_tag }}
         countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
+        reset: 'true'
       secrets: inherit
     seed-data:
       needs: [deploy, check-countryconfig]
