--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -35,16 +35,16 @@ jobs:
           fi
     create-server:
       needs: verify-branch
-      uses: ./.github/workflows/dummy-create-server.yml
-      # uses: ./.github/workflows/create-hetzner-server.yml
+      # uses: ./.github/workflows/dummy-create-server.yml
+      uses: ./.github/workflows/create-hetzner-server.yml
       with:
         environment: ${{ inputs.environment }}
       secrets: inherit
       # steps.get_latest_commit.outputs.config_tag
     provision-server:
       needs: [verify-branch, create-server]
-      uses: ./.github/workflows/dummy-provision.yml
-      # uses: ./.github/workflows/provision.yml
+      # uses: ./.github/workflows/dummy-provision.yml
+      uses: ./.github/workflows/provision.yml
       with:
         environment: ${{ inputs.environment }}
       secrets: inherit
@@ -75,10 +75,10 @@ jobs:
         countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
         reset: 'true'
       secrets: inherit
-    seed-data:
-      needs: [deploy, check-countryconfig]
-      uses: ./.github/workflows/dummy-seed.yml
-      # uses: ./.github/workflows/seed-data.yml
-      with:
-        environment: ${{ inputs.environment }}
-        core-image-tag: ${{ inputs.core_image_tag }}
+    # seed-data:
+    #   needs: [deploy, check-countryconfig]
+    #   uses: ./.github/workflows/dummy-seed.yml
+    #   # uses: ./.github/workflows/seed-data.yml
+    #   with:
+    #     environment: ${{ inputs.environment }}
+    #     core-image-tag: ${{ inputs.core_image_tag }}
