--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -1,61 +1,82 @@
-name: Provision Release Environment
-run-name: Provision ${{ inputs.env_name }} release environment
+# How to use this workflow:
+##################################################################
+# Workflow should be triggered manually from release branch
+# environment: Name of the environment to create
+# core_image_tag: OpenCRVS core image tag
+# Country config will be provisioned from latest commit to release branch
+name: Release - Provision Environment
+run-name: "Provision ${{ github.ref_name }} release environment (core: ${{ inputs.core_image_tag }})"
 on:
     workflow_dispatch:
         inputs:
-            release_version:
-                description: "Release version to deploy in format vX.Y.Z"
-                required: true
             core_image_tag:
-                description: Core image tag (if empty it will be set to release_version)
-                required: false
-                type: string
-            countryconfig_image_tag:
-                description: Country config image tag (if empty it will be set to release_version)
-                required: false
-                type: string
-    workflow_call:
-        inputs:
-            env_name:
-                type: string
-                description: Environment to deploy to
+                description: "Core image tag"
                 required: true
-            core_image_tag:
-                description: Core image tag (if empty it will be set to release_version)
-                required: false
-                type: string
-            country_config_version:
-                description: Country config image tag (if empty it will be set to release_version)
-                required: false
                 type: string
 
 jobs:
-  create-server:
-    uses: ./.github/workflows/dummy-create-server.yml
-    with:
-      env_name: ${{ inputs.env_name }}
-    secrets: inherit
-
-  provision-server:
-    needs: create-server
-    uses: ./.github/workflows/dummy-provision.yml
-    with:
-      environment: ${{ inputs.env_name }}
-    secrets: inherit
-
-  deploy:
-    needs: provision-server
-    uses: ./.github/workflows/dummy-deploy.yml
-    with:
-      environment: ${{ inputs.env_name }}
-      core-image-tag: ${{ inputs.core_image_tag }}
-      countryconfig-image-tag: ${{ inputs.countryconfig_image_tag }}
-    secrets: inherit
-
-  seed-data:
-    needs: deploy
-    uses: ./.github/workflows/dummy-seed.yml
-    with:
-      environment: ${{ inputs.env_name }}
-      core-image-tag: ${{ inputs.core_image_tag }}
-    secrets: inherit
+    get-environment:
+      runs-on: ubuntu-24.04
+      outputs:
+        environment: ${{ steps.set_environment.outputs.environment }}
+      steps:
+      - name: Set environment name
+        id: set_environment
+        # Convert branch name to environment name
+        # e.g. release-v1.2.3 -> v1-2-3,
+        #      1.2.3 -> v1-2-3
+        run: |
+          environment=$(echo ${{ github.ref_name }} | sed -e 's/\./-/g' -e 's/release\-v//g')
+          echo "environment=v${environment}" >> $GITHUB_OUTPUT
+    verify-branch:
+      needs: get-environment
+      environment: ${{ needs.get-environment.outputs.environment }}
+      runs-on: ubuntu-24.04
+      steps:
+      - name: Fail if not on release branch
+        run: |
+          echo "Current ref name: ${{ github.ref_name }} and ref: ${{ github.ref }}"
+          if [[ "${{ github.ref }}" != refs/heads/release/* ]]
+          then
+              echo "❌ This workflow must be run from a release/* branch."
+              echo "Please check release documentation for more information: TODO: Add link to documentation"
+              exit 0
+          fi
+    create-server:
+      needs: [verify-branch, get-environment]
+      uses: ./.github/workflows/create-hetzner-server.yml
+      with:
+        environment: ${{ needs.get-environment.outputs.environment }}
+      secrets: inherit
+    check-countryconfig:
+      runs-on: ubuntu-24.04
+      needs: [verify-branch, create-server, get-environment]
+      environment: ${{ needs.get-environment.outputs.environment }}
+      outputs:
+        image_tag: ${{ steps.get_latest_commit.outputs.config_tag }}
+      steps:
+          - name: Checkout repo ${{ github.repository }}
+            uses: actions/checkout@v4
+          - name: Get latest commit SHA
+            id: get_latest_commit
+            run: |
+              git pull
+              git status
+              config_tag=$(git rev-parse HEAD | cut -c 1-7)
+              echo "Latest commit SHA: $config_tag"
+              echo "config_tag=$config_tag" >> $GITHUB_OUTPUT
+    provision-server:
+      needs: [verify-branch, create-server, check-countryconfig, get-environment]
+      uses: ./.github/workflows/provision.yml
+      with:
+        environment: ${{ needs.get-environment.outputs.environment }}
+      secrets: inherit
+    deploy:
+      needs: [verify-branch, provision-server, check-countryconfig, create-server, get-environment]
+      uses: ./.github/workflows/deploy.yml
+      with:
+        environment: ${{ needs.get-environment.outputs.environment }}
+        core-image-tag: ${{ inputs.core_image_tag }}
+        countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
+        reset: 'true'
+      secrets: inherit
