--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,13 @@ jobs:
 
       - name: Test
         run: yarn test
+
+      - name: Bash script linting
+        uses: ludeeus/action-shellcheck@master
+        continue-on-error: true
+        with:
+          severity: error
+          ignore_paths: |
+            node_modules/**/*
+        env:
+          SHELLCHECK_OPTS: -e SC2086 -e SC2068
