--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -54,18 +54,18 @@ jobs:
               config_tag=$(git rev-parse HEAD | cut -c 1-7)
               echo "Latest commit SHA: $config_tag"
               echo "config_tag=$config_tag" >> $GITHUB_OUTPUT
-    provision-server:
-      needs: [verify-branch, create-server, check-countryconfig]
-      uses: ./.github/workflows/provision.yml
-      with:
-        environment: ${{ inputs.environment }}
-      secrets: inherit
-    deploy:
-      needs: [verify-branch, provision-server, check-countryconfig, create-server]
-      uses: ./.github/workflows/deploy.yml
-      with:
-        environment: ${{ inputs.environment }}
-        core-image-tag: ${{ inputs.core_image_tag }}
-        countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
-        reset: 'true'
-      secrets: inherit
+    # provision-server:
+    #   needs: [verify-branch, create-server, check-countryconfig]
+    #   uses: ./.github/workflows/provision.yml
+    #   with:
+    #     environment: ${{ inputs.environment }}
+    #   secrets: inherit
+    # deploy:
+    #   needs: [verify-branch, provision-server, check-countryconfig, create-server]
+    #   uses: ./.github/workflows/deploy.yml
+    #   with:
+    #     environment: ${{ inputs.environment }}
+    #     core-image-tag: ${{ inputs.core_image_tag }}
+    #     countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
+    #     reset: 'true'
+    #   secrets: inherit
