--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -100,6 +100,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          ref: ${{ github.ref_name }}
           path: './${{ github.event.repository.name }}'
       - name: Insert production encryption key to environment variables
         if: github.event.inputs.environment == 'staging' && needs.get-production-encryption-key.outputs.environment_exists == 'true'
