--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -5,21 +5,29 @@
 # core_image_tag: OpenCRVS core image tag
 # Country config will be provisioned from latest commit to release branch
 name: Release - Provision Environment
-run-name: "Provision ${{ inputs.environment }} release environment (core: ${{ inputs.core_image_tag }})"
+run-name: "Provision ${{ github.ref_name }} release environment (core: ${{ inputs.core_image_tag }})"
 on:
     workflow_dispatch:
         inputs:
-            environment:
-                description: "Environment, e/g v19 will create v19.opencrvs.dev"
-                required: true
             core_image_tag:
                 description: "Core image tag"
                 required: true
                 type: string
 
 jobs:
+    get-environment:
+      runs-on: ubuntu-24.04
+      outputs:
+        environment: ${{ steps.set_environment.outputs.environment }}
+      steps:
+      - name: Set environment name
+        id: set_environment
+        run: |
+          environment=$(echo ${{ github.ref_name }} | sed -e 's/./_/g' -e 's/release\-///')
+          echo "environment=v${environment}" >> $GITHUB_OUTPUT
     verify-branch:
-      environment: ${{ inputs.environment }}
+      needs: get-environment
+      environment: ${{ needs.get-environment.outputs.environment }}
       runs-on: ubuntu-24.04
       steps:
       - name: Fail if not on release branch
@@ -32,15 +40,15 @@ jobs:
               exit 0
           fi
     create-server:
-      needs: verify-branch
+      needs: [verify-branch, get-environment]
       uses: ./.github/workflows/create-hetzner-server.yml
       with:
-        environment: ${{ inputs.environment }}
+        environment: ${{ needs.get-environment.outputs.environment }}
       secrets: inherit
     check-countryconfig:
       runs-on: ubuntu-24.04
-      needs: [verify-branch, create-server]
-      environment: ${{ inputs.environment }}
+      needs: [verify-branch, create-server, get-environment]
+      environment: ${{ needs.get-environment.outputs.environment }}
       outputs:
         image_tag: ${{ steps.get_latest_commit.outputs.config_tag }}
       steps:
@@ -55,16 +63,16 @@ jobs:
               echo "Latest commit SHA: $config_tag"
               echo "config_tag=$config_tag" >> $GITHUB_OUTPUT
     provision-server:
-      needs: [verify-branch, create-server, check-countryconfig]
+      needs: [verify-branch, create-server, check-countryconfig, get-environment]
       uses: ./.github/workflows/provision.yml
       with:
-        environment: ${{ inputs.environment }}
+        environment: ${{ needs.get-environment.outputs.environment }}
       secrets: inherit
     deploy:
-      needs: [verify-branch, provision-server, check-countryconfig, create-server]
+      needs: [verify-branch, provision-server, check-countryconfig, create-server, get-environment]
       uses: ./.github/workflows/deploy.yml
       with:
-        environment: ${{ inputs.environment }}
+        environment: ${{ needs.get-environment.outputs.environment }}
         core-image-tag: ${{ inputs.core_image_tag }}
         countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
         reset: 'true'
