--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "playwright-ctrf-json-reporter": "^0.0.18",
     "prettier": "^3.4.2",
     "react-intl": "^6.4.3",
+    "tsx": "^4.19.4",
     "vite-tsconfig-paths": "^3.5.0",
     "vitest": "^2.1.2"
   },
