feat: Multi-node environment setup

--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -11,6 +11,10 @@ on:
         type: string
         description: Environment to deploy to
         default: all
+      is_env_staging:
+        type: boolean
+        description: Is custom environment a staging like server
+        default: false
   workflow_dispatch:
     inputs:
       environment:
@@ -51,6 +55,10 @@ on:
           - ufw
           - updates
           - users
+      is_env_staging:
+        type: boolean
+        description: Is custom environment a staging like server
+        default: false
 jobs:
   get-backup-ssh-key:
     name: Get backup SSH key
@@ -72,13 +80,31 @@ jobs:
       gh_token: ${{ secrets.GH_TOKEN }}
       encryption_key: ${{ secrets.GH_ENCRYPTION_PASSWORD }}
       SSH_KEY: ${{ secrets.SSH_KEY }}
+  get-production-env-name:
+    environment: ${{ inputs.environment }}
+    if: inputs.environment == 'staging' || inputs.is_env_staging
+    runs-on: ubuntu-24.04
+    outputs:
+      environment: ${{ steps.env_name.outputs.environment }}
+    steps:
+      - name: Check environment name
+        id: env_name
+        run: |
+          if [ ${{ inputs.environment }} == 'staging' ]; then
+            echo "environment=production" >> $GITHUB_OUTPUT
+          else
+            echo "⚠️ NOTE: Staging like environment: is_env_staging: ${{ inputs.is_env_staging }}"
+            environment=${{ inputs.environment }}
+            echo "environment=${environment/staging/prod}" >> $GITHUB_OUTPUT
+          fi
   get-production-encryption-key:
     name: Get production backup encryption key
-    if: inputs.environment == 'staging'
+    needs: ['get-production-env-name']
+    if: inputs.environment == 'staging' || inputs.is_env_staging
     uses: ./.github/workflows/get-secret-from-environment.yml
     with:
       secret_name: 'BACKUP_ENCRYPTION_PASSPHRASE'
-      env_name: 'production'
+      env_name: ${{ needs.get-production-env-name.outputs.environment }}
     secrets:
       gh_token: ${{ secrets.GH_TOKEN }}
       encryption_key: ${{ secrets.GH_ENCRYPTION_PASSWORD }}
@@ -100,7 +126,7 @@ jobs:
           ref: ${{ github.ref_name }}
           path: './${{ github.event.repository.name }}'
       - name: Insert production encryption key to environment variables
-        if: inputs.environment == 'staging' && needs.get-production-encryption-key.outputs.environment_exists == 'true'
+        if: (inputs.environment == 'staging' || inputs.is_env_staging) && needs.get-production-encryption-key.outputs.environment_exists == 'true'
         run: |
           echo "${{ needs.get-production-encryption-key.outputs.secret_value }}" | base64 --decode | \
           openssl enc -aes-256-cbc -pbkdf2 -d -salt -k "${{ secrets.GH_ENCRYPTION_PASSWORD }}" -out /tmp/backup_encryption_key
